Ajustes y refactorizacion